--- a/PixEditor/ui/src/mainUI.form
+++ b/PixEditor/ui/src/mainUI.form
@@ -39,17 +39,17 @@
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="11">
-                <StringItem index="0" value="BinarizeLinear"/>
+                <StringItem index="0" value="Binarization"/>
                 <StringItem index="1" value="Brightness"/>
-                <StringItem index="2" value="Gamma"/>
-                <StringItem index="3" value="Inversion"/>
+                <StringItem index="2" value="GammaCorrection"/>
+                <StringItem index="3" value="ColorInversion"/>
                 <StringItem index="4" value="Rectification"/>
-                <StringItem index="5" value="Saturation"/>
+                <StringItem index="5" value="Hue-Saturation-Brightness"/>
                 <StringItem index="6" value="Convolution"/>
-                <StringItem index="7" value="BadBlurConvolution"/>
-                <StringItem index="8" value="EdgeDetectConvolution"/>
-                <StringItem index="9" value="EmbossConvolution"/>
-                <StringItem index="10" value="SharpenConvolution"/>
+                <StringItem index="7" value="Blur"/>
+                <StringItem index="8" value="EdgeDetect"/>
+                <StringItem index="9" value="Emboss"/>
+                <StringItem index="10" value="Sharpen"/>
               </StringArray>
             </Property>
           </Properties>
@@ -275,7 +275,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="0" y="-10" width="1280" height="820"/>
+              <AbsoluteConstraints x="0" y="-10" width="1280" height="830"/>
             </Constraint>
           </Constraints>
         </Component>
